force-app/main/default/objects/Employee__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
</CustomField>