force-app/main/default/objects/Employee__c/fields/Total_Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Leave_Balance__c</fullName>
    <label>Total Leave Balance</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>